<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">moeeza_s_application</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <!--TODO ENTER YOUR APP ID BELOW-->
    <string name="facebook_app_id"/>
    <!--TODO ENTER YOUR APP ID BELOW (eg: fb0123456789)-->
    <string name="fb_login_protocol_scheme">fb</string>
    <!--TODO ENTER YOUR Client Token BELOW-->
    <string name="facebook_client_token"/>
<string name="msg_winter_collecti">Winter
Collections</string>
<string name="msg_don_t_have_an_a">Don\u2019t have an account? Register Now</string>
<string name="lbl_no">No</string>
<string name="msg_confirm_passwor">Confirm password</string>
<string name="msg_password_change">Password Changed!</string>
<string name="msg_welcome_to_dona">Welcome to DoNation</string>
<string name="msg_select_from_gal">Select from Gallery</string>
<string name="lbl_resend">Resend</string>
<string name="lbl_reset_password">Reset Password</string>
<string name="lbl_or_login_with">Or Login with</string>
<string name="msg_already_have_an">Already have an account? Login Now</string>
<string name="lbl_emmanuel">Emmanuel</string>
<string name="msg_continue_as_a_g">Continue as a guest</string>
<string name="lbl_new_password">New Password</string>
<string name="msg_enter_your_pass">Enter your password</string>
<string name="msg_let_s_begin_you">Let\u2019s Begin Your Fashion Journey</string>
<string name="lbl_wardrobe">Wardrobe</string>
<string name="lbl_shirts">Shirts</string>
<string name="msg_remember_passwo2">Remember Password? </string>
<string name="msg_confirm_passwor2">Confirm Password</string>
<string name="msg_fashion_footpri">Fashion
Footprint</string>
<string name="msg_or_register_wit">Or Register with</string>
<string name="lbl_appearance">Appearance</string>
<string name="lbl_my_donations">My Donations</string>
<string name="lbl_reminder">Reminder</string>
<string name="msg_forgot_password">Forgot Password?</string>
<string name="msg_hello_register">Hello! Register to get started</string>
<string name="msg_create_new_pass">Create new password</string>
<string name="lbl_username">Username</string>
<string name="lbl_login_now">Login Now</string>
<string name="lbl_my_closet">My Closet</string>
<string name="msg_amonut_of_cloth">Amonut of Clothes</string>
<string name="msg_you_are_welcome">You are Welcome!</string>
<string name="lbl_cloth_donation">Cloth Donation</string>
<string name="msg_here_s_suggesti">Here\u2019s Suggestion</string>
<string name="lbl_get_details">Get Details</string>
<string name="lbl_back_to_login">Back to Login</string>
<string name="msg_don_t_worry_it">"Don't worry! It occurs. Please enter the email address linked with your account."</string>
<string name="msg_don_t_have_an_a2">Don\u2019t have an account? </string>
<string name="msg_hello_emmanuel">Hello Emmanuel welcome to DoNation. Swipe this to read more..</string>
<string name="msg_processing_dona">Processing Donation...</string>
<string name="lbl_donate_clothes">Donate Clothes</string>
<string name="msg_enter_the_verif">Enter the verification code we just sent on your email address.</string>
<string name="msg_already_have_an2">Already have an account? </string>
<string name="lbl_jackets">Jackets</string>
<string name="lbl_casual_wear">Casual Wear</string>
<string name="msg_you_haven_t_mad">You haven\u2019t made any donations yet. You could by tapping the button below</string>
<string name="msg_term_conditio">Term &amp; Condition</string>
<string name="msg_remember_passwo">Remember Password? Login</string>
<string name="msg_didn_t_received2">Didn\u2019t received code? </string>
<string name="msg_copyright_s19_m">copyright S19 mobility pvt.ltd </string>
<string name="lbl_take_a_video">Take A Video</string>
<string name="lbl_take_a_picture">Take A Picture</string>
<string name="msg_your_new_passwo">Your new password must be unique from those previously used.</string>
<string name="lbl_password">Password</string>
<string name="lbl_send_code">Send Code</string>
<string name="lbl_invite_a_friend">Invite A Friend</string>
<string name="msg_clothes_descrip">Clothes Description</string>
<string name="lbl_account">Account</string>
<string name="msg_generic_donatin">Generic Donating</string>
<string name="lbl_party_wear">Party Wear</string>
<string name="lbl_donate">Donate</string>
<string name="msg_donate_cash_ins">Donate Cash Instead?</string>
<string name="msg_no_clothes_dona">No Clothes Donated Yet</string>
<string name="msg_take_a_picture">Take a picture / Video of the clothing items</string>
<string name="lbl_categories">Categories</string>
<string name="msg_this_platform_c">"The FashionFootprint mobile app development project aimed to create a sustainable fashion application targeting environmentally conscious individuals. The app's objective was to provide users with information and tools to make informed fashion choices and reduce their environmental impact. By offering features such as clothing material analysis, brand sustainability ratings, and personalized style recommendations, FashionFootprint aimed to empower users to make sustainable fashion decisions."</string>
<string name="lbl_good_evening">Good Evening</string>
<string name="lbl_about_us">About us</string>
<string name="msg_your_one_stop_s">Your one-stop solution for eco-friendly fashion and personalized style!</string>
<string name="lbl_verify">Verify</string>
<string name="msg_hurray_you_jus">Hurray!\u2028You just helped a life with your donation.</string>
<string name="lbl_footprint">Footprint</string>
<string name="msg_privacy_polic">Privacy &amp; Policy</string>
<string name="lbl_challenges">Challenges</string>
<string name="lbl_get_started">Get Started</string>
<string name="msg_welcome_back_g">Welcome back! Glad to see you, Again!</string>
<string name="lbl_pants">Pants</string>
<string name="lbl_help_support">Help &amp; Support</string>
<string name="lbl_register">Register</string>
<string name="msg_yes_please_keep">Yes please keep me anonymous</string>
<string name="msg_summer_collecti">Summer
Collections</string>
<string name="lbl_email">Email</string>
<string name="msg_what_do_you_wan">What Do You Want To Search</string>
<string name="msg_swipe_to_take_t">Swipe to take the tour</string>
<string name="lbl_register_now">Register Now</string>
<string name="msg_otp_verificatio">OTP Verification</string>
<string name="lbl_login">Login</string>
<string name="msg_would_you_like">Would you like to stay anonymous</string>
<string name="msg_your_password_h">Your password has been changed successfully.</string>
<string name="lbl_fashion">Fashion</string>
<string name="lbl_about_outfit">About Outfit</string>
<string name="msg_report_a_proble">Report A Problem</string>
<string name="msg_no_i_dont_want">No, i dont want to be</string>
<string name="msg_enter_your_emai">Enter your email</string>
<string name="msg_enter_pickup_ad">Enter pickup Address</string>
<string name="msg_didn_t_received">Didn\u2019t received code? Resend</string>
<string name="lbl_settings">Settings</string>
<string name="lbl_make_a_donation">Make A Donation</string>
<string name="lbl_welcome_to">Welcome to</string>
<string name="msg_your_donated_it">Your donated items would be picked from the address inputed from the form.\u2028Thanks for Donating\u2028❤</string>
<string name="lbl_3_mins_ago">3 mins ago</string>
<string name="msg_these_soft_cak">These soft, cake-like Strawberry Frosted Donuts feature fresh strawberries and a delicious fresh strawberry glaze frosting. Pretty enough for company and the perfect treat to satisfy your sweet tooth.</string>
<string name="msg_please_enter_valid_email">Please enter valid email</string>
<string name="msg_please_enter_valid_text">Please enter valid text</string>
<string name="msg_please_enter_valid_pa">Please enter valid password</string>
</resources>
