<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="forgotPasswordVM" type="com.moeezasapplication.app.modules.forgotpassword.data.viewmodel.ForgotPasswordVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearForgotPassword"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylepink_50">

        <ImageButton
            android:background="@drawable/rectangle_bg_white_a700_border_white_a700_radius_12"
            android:id="@+id/btnArrowleft"
            android:layout_height="@dimen/_41pxh"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_23pxv"
            android:layout_width="@dimen/_41pxh"
            android:paddingHorizontal="@dimen/_13pxh"
            android:paddingVertical="@dimen/_13pxv"
            android:scaleType="fitCenter"
            android:src="@drawable/img_arrowleft" tools:ignore="ContentDescription"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtWelcomebackG"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_32pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{forgotPasswordVM.forgotPasswordModel.txtWelcomebackG}"
            style="@style/txtUrbanistromanbold30" tools:text="@string/msg_forgot_password"/>
        <TextView android:id="@+id/txtDontworryIt"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="match_parent"
            android:text="@{forgotPasswordVM.forgotPasswordModel.txtDontworryIt}"
            style="@style/txtUrbanistromanmedium16" tools:text="@string/msg_don_t_worry_it"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_white_a700_radius_28"
            android:ellipsize="end"
            android:hint="@string/msg_enter_your_emai"
            android:id="@+id/etEnteryouremai"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_30pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_17pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_18pxh"
            android:paddingTop="@dimen/_20pxv" android:singleLine="true"
            android:text="@={forgotPasswordVM.forgotPasswordModel.etEnteryouremaiValue}"
            android:textColorHint="@color/bluegray_400"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnSendCode"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_38pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_19pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_19pxv" android:singleLine="true"
            android:text="@string/lbl_send_code"
            android:textAllCaps="false" style="@style/btnSolidRounded_3" tools:text="@string/lbl_send_code"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtRememberPasswo"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_23pxv"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_361pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.01" android:singleLine="true"
            android:text="@{forgotPasswordVM.forgotPasswordModel.txtRememberPasswo}"
            style="@style/txtPoppinssemibold15_1" tools:text="@string/msg_remember_passwo"/>
    </LinearLayout>
</layout>
