<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="createNewPasswordVM" type="com.moeezasapplication.app.modules.createnewpassword.data.viewmodel.CreateNewPasswordVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearCreatenewpass"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylepink_50">

        <ImageButton
            android:background="@drawable/rectangle_bg_white_a700_border_indigo_50_radius_12"
            android:id="@+id/btnArrowleft"
            android:layout_height="@dimen/_41pxh"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_23pxv"
            android:layout_width="@dimen/_41pxh"
            android:paddingHorizontal="@dimen/_13pxh"
            android:paddingVertical="@dimen/_13pxv"
            android:scaleType="fitCenter"
            android:src="@drawable/img_arrowleft" tools:ignore="ContentDescription"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtWelcomebackG"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_32pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{createNewPasswordVM.createNewPasswordModel.txtWelcomebackG}"
            style="@style/txtUrbanistromanbold30" tools:text="@string/msg_create_new_pass"/>
        <TextView android:gravity="center_horizontal"
            android:id="@+id/txtTimeZone"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="match_parent"
            android:text="@{createNewPasswordVM.createNewPasswordModel.txtTimeZone}"
            style="@style/txtUrbanistromanmedium16" tools:text="@string/msg_your_new_passwo"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_white_a700_radius_28"
            android:ellipsize="end"
            android:hint="@string/lbl_new_password"
            android:id="@+id/etNewPasswordI"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_30pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_19pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_18pxh"
            android:paddingTop="@dimen/_18pxv" android:singleLine="true"
            android:text="@={createNewPasswordVM.createNewPasswordModel.etNewPasswordIValue}"
            android:textColorHint="@color/bluegray_400"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_white_a700_radius_28"
            android:ellipsize="end"
            android:hint="@string/msg_confirm_passwor2"
            android:id="@+id/etConfirmPasswor"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_19pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_18pxh"
            android:paddingTop="@dimen/_18pxv" android:singleLine="true"
            android:text="@={createNewPasswordVM.createNewPasswordModel.etConfirmPassworValue}"
            android:textColorHint="@color/bluegray_400"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnResetPassword"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_38pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_19pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_19pxv" android:singleLine="true"
            android:text="@string/lbl_reset_password"
            android:textAllCaps="false" style="@style/btnSolidRounded_3" tools:text="@string/lbl_reset_password"/>
    </LinearLayout>
</layout>
