<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="donationFiveVM" type="com.moeezasapplication.app.modules.donationfive.data.viewmodel.DonationFiveVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearDonationFive"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylered_50">

        <ImageView android:id="@+id/imageArrowleft"
            android:layout_gravity="start"
            android:layout_height="@dimen/_12pxh"
            android:layout_marginEnd="@dimen/_41pxh"
            android:layout_marginStart="@dimen/_41pxh"
            android:layout_marginTop="@dimen/_29pxv"
            android:layout_width="@dimen/_6pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_arrowleft_black_900"
            tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft_black_900"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtDonateClothes"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_31pxh"
            android:layout_marginStart="@dimen/_31pxh"
            android:layout_marginTop="@dimen/_38pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_6pxh"
            android:singleLine="true"
            android:text="@{donationFiveVM.donationFiveModel.txtDonateClothes}"
            style="@style/txtGilroybold24" tools:text="@string/lbl_donate_clothes"/>
        <EditText
            android:background="@drawable/rectangle_border_gray_900_66_radius_12"
            android:ellipsize="end"
            android:hint="@string/msg_amonut_of_cloth"
            android:id="@+id/etTextField" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_23pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:paddingBottom="@dimen/_16pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_13pxv" android:singleLine="true"
            android:text="@={donationFiveVM.donationFiveModel.etTextFieldValue}"
            android:textColorHint="@color/gray_500"
            style="@style/etRoundedOutline" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_border_gray_900_66_radius_12"
            android:ellipsize="end"
            android:hint="@string/msg_clothes_descrip"
            android:id="@+id/etTextarea" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_24pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:paddingBottom="@dimen/_30pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_14pxv" android:singleLine="true"
            android:text="@={donationFiveVM.donationFiveModel.etTextareaValue}"
            android:textColorHint="@color/gray_500"
            style="@style/etRoundedOutline" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_border_gray_900_66_radius_12"
            android:ellipsize="end"
            android:hint="@string/msg_enter_pickup_ad"
            android:id="@+id/etTextareaOne" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_24pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:paddingBottom="@dimen/_30pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_14pxv" android:singleLine="true"
            android:text="@={donationFiveVM.donationFiveModel.etTextareaOneValue}"
            android:textColorHint="@color/gray_500"
            style="@style/etRoundedOutline" tools:ignore="Autofill"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnwouldyoulike"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_22pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylecornerRadius">
            <TextView android:ellipsize="end"
                android:id="@+id/txtWouldyoulike"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:singleLine="true"
                android:text="@{donationFiveVM.donationFiveModel.txtWouldyoulike}"
                style="@style/txtGilroysemibold16" tools:text="@string/msg_would_you_like"/>
            <Spinner
                android:background="@drawable/layer_list_border_gray_900_66_radius_12"
                android:id="@+id/spinnerTextFieldOne"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_7pxv"
                android:layout_width="match_parent" tools:listitem="@layout/spinner_item"/>
        </LinearLayout>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtTakeapicture"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_23pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:singleLine="true"
            android:text="@{donationFiveVM.donationFiveModel.txtTakeapicture}"
            style="@style/txtGilroyregular16_1" tools:text="@string/msg_take_a_picture"/>
        <ImageButton
            android:background="@drawable/rectangle_bg_gray_300_radius_12"
            android:id="@+id/btnPlus" android:layout_gravity="start"
            android:layout_height="@dimen/_72pxh"
            android:layout_marginEnd="@dimen/_26pxh"
            android:layout_marginStart="@dimen/_26pxh"
            android:layout_marginTop="@dimen/_7pxv"
            android:layout_width="@dimen/_72pxh"
            android:paddingHorizontal="@dimen/_29pxh"
            android:paddingVertical="@dimen/_29pxv"
            android:scaleType="fitCenter"
            android:src="@drawable/img_plus" tools:ignore="ContentDescription"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnMakeADonationOne"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_55pxv"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_37pxv"
            android:layout_width="@dimen/_269pxh"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:paddingBottom="@dimen/_17pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_17pxv" android:singleLine="true"
            android:text="@string/lbl_make_a_donation"
            android:textAllCaps="false" style="@style/btnSolidRounded" tools:text="@string/lbl_make_a_donation"/>
    </LinearLayout>
</layout>
